# securedrop-https-everywhere-ruleset

./: .gitignore  Makefile  README.md  dev-requirements.txt  index.html  jwk.py  key.jwk  latest-rulesets-timestamp  onboarded.txt  pgppubkey_to_jwk.py  public_release.pem  pyproject.toml  release-pubkey.jwk  requirements.in  requirements.txt  rulesets-signature.1586899568.sha256  rulesets-signature.1588004096.sha256  rulesets-signature.1593528236.sha256  rulesets-signature.1596120728.sha256  rulesets-signature.1603895824.sha256  rulesets-signature.1607477429.sha256  rulesets-signature.1608596542.sha256  rulesets-signature.1610485177.sha256  rulesets-signature.1610486469.sha256  rulesets-signature.1611616447.sha256  rulesets-signature.1612308928.sha256  rulesets-signature.1612461755.sha256  rulesets-signature.1612546470.sha256  rulesets-signature.1614864041.sha256  rulesets-signature.1617642666.sha256  rulesets-signature.1618242977.sha256  rulesets-signature.1619025266.sha256  rulesets-signature.1619632183.sha256  rulesets-signature.1619645390.sha256  rulesets-signature.1620999341.sha256  rulesets-signature.1622054201.sha256  rulesets-signature.1622134324.sha256  rulesets-signature.1623706089.sha256  rulesets-signature.1624637147.sha256  rulesets-signature.1625068418.sha256  (+40 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
channel/: latest-rulesets-timestamp  rulesets-signature.1567398063.sha256  rulesets-signature.1582940785.sha256
docker/: Dockerfile  nginx.conf
rulesets/: 2600-hacker-quarterly-securedrop-ruleset.xml  abc-au-securedrop-ruleset.xml  (+70 more)
(+7 files in other folders)
